[gd_scene load_steps=7 format=3 uid="uid://cps7p7nym641q"]

[ext_resource type="Script" path="res://scripts/UI/workstation_menu.gd" id="1_0fh1w"]
[ext_resource type="Texture2D" uid="uid://5cncc3gcfdea" path="res://assets/images/ui/ui_backgrounds.png" id="2_j0vkx"]
[ext_resource type="Theme" uid="uid://dyugk3om4he7e" path="res://button_texture.tres" id="3_7d8tq"]
[ext_resource type="LabelSettings" uid="uid://7llj52gapo2a" path="res://assets/images/ui/label_settings.tres" id="4_ka718"]
[ext_resource type="FontFile" uid="uid://b7t3d5u8ie0gp" path="res://assets/images/ui/DungeonFont.ttf" id="4_pw7j1"]

[sub_resource type="LabelSettings" id="LabelSettings_jx6av"]
font = ExtResource("4_pw7j1")
font_size = 36

[node name="WorkstationMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0fh1w")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -215.0
offset_right = 161.0
offset_bottom = 218.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -230.0
offset_right = 204.0
offset_bottom = 263.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_j0vkx")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="CloseButton" type="Button" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = 157.0
offset_right = 43.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_7d8tq")
action_mode = 0
text = "Close"

[node name="ReagentBackground" type="NinePatchRect" parent="Background"]
layout_mode = 0
offset_left = 70.0
offset_top = 54.0
offset_right = 326.0
offset_bottom = 229.0
texture = ExtResource("2_j0vkx")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="ReagentOne" type="OptionButton" parent="Background/ReagentBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -72.5
offset_right = -25.0
offset_bottom = -7.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_7d8tq")

[node name="ReagentTwo" type="OptionButton" parent="Background/ReagentBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 26.0
offset_top = -71.5
offset_right = 111.0
offset_bottom = -6.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_7d8tq")

[node name="Label" type="Label" parent="Background/ReagentBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -129.5
offset_right = 63.0
offset_bottom = -96.5
grow_horizontal = 2
grow_vertical = 2
text = "Workstation"
label_settings = SubResource("LabelSettings_jx6av")

[node name="ImbueButton" type="Button" parent="Background/ReagentBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = 11.5
offset_right = 45.0
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_7d8tq")
text = "Imbue"

[node name="CurrReagentBackground" type="NinePatchRect" parent="Background"]
layout_mode = 0
offset_left = 73.0
offset_top = 269.0
offset_right = 324.0
offset_bottom = 374.0
texture = ExtResource("2_j0vkx")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Label" type="Label" parent="Background/CurrReagentBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = -44.5
offset_right = 78.5
offset_bottom = -21.5
grow_horizontal = 2
grow_vertical = 2
text = "Current Imbuement"
label_settings = ExtResource("4_ka718")

[node name="ReagentLabel" type="Label" parent="Background/CurrReagentBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.5
offset_top = 2.5
offset_right = 77.5
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
label_settings = ExtResource("4_ka718")
horizontal_alignment = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Background/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Background/ReagentBackground/ImbueButton" to="." method="_on_imbue_button_pressed"]
